--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,8 +2,8 @@
     display: grid;
     width: 100%;
     height: 100vh;
-    grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: auto 1fr;
+    grid-template-columns: auto repeat(8, 1fr);
+    grid-template-rows: auto 1fr auto;
     grid-column-gap: 0;
     grid-row-gap: 0;
 
